[project]
name = "cer-repository-scrapper"
version = "0.1.0"
description = "CER REGDOCS repository scraper -- captures, analyzes, and delivers regulatory filings"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings[yaml]>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cer_scraper"]
