[project]
name = "cer-repository-scrapper"
version = "0.1.0"
description = "CER REGDOCS repository scraper -- captures, analyzes, and delivers regulatory filings"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "pydantic-settings[yaml]>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cer_scraper"]
