[project]
name = "cer-repository-scrapper"
version = "0.1.0"
description = "CER REGDOCS repository scraper -- captures, analyzes, and delivers regulatory filings"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "pydantic-settings[yaml]>=2.12.0",
    "pymupdf4llm>=0.2.9",
    "python-frontmatter>=1.1.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "tabulate>=0.9.0",
    "tenacity>=9.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cer_scraper"]
